Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-3545
uassert if $elemMatch is attempted within $in
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
1.9.2
Affects Version/s:
None
Component/s:
Querying
Labels:
None
Field Tab
Aha! Info
Operating System:
ALL
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Description
See
SERVER-3544
Attachments
Issue Links
is related to
SERVER-3544
support $elemMatch with $in
Closed
Activity
People
Assignee:
Aaron Staple (Inactive)
Reporter:
Aaron Staple (Inactive)
Participants:
Aaron Staple
,
auto
Votes
:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
Aug 08 2011 12:19:26 AM UTC
Updated:
Jul 12 2016 12:17:07 AM UTC
Resolved:
Aug 09 2011 12:26:45 AM UTC
PagerDuty