SERVER-3545 uassert if elemMatch specified with ithin in or nin